--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       context: ./client
     volumes:
       - /app/node_modules
-      - .client:/app
+      - ./client:/app
   worker:
     environment:
       - REDIS_HOST=redis
@@ -50,5 +50,5 @@ services:
       context: ./worker
     volumes:
       - /app/node_modules
-      - .worker:/app
+      - ./worker:/app
     
