--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
  - docker build -t yokada0807/react-test -f ./client/Dockerfile.dev ./client
 
 script:
- - docker run yokada0807/react-test npm test -- --coverage
+ - docker run -e CI=true yokada0807/react-test npm test -- --coverage
 
 after_success:
   - docker build -t yokada0807/muilti-client ./client
