--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ script:
  - docker run -e CI=true yoshi0807/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t yoshi0807/muilti-client ./client
-  - docker build -t yoshi0807/muilti-nginx ./nginx
-  - docker build -t yoshi0807/muilti-server ./server
-  - docker build -t yoshi0807/muilti-worker ./worker
+  - docker build -t yoshi0807/multi-client ./client
+  - docker build -t yoshi0807/multi-nginx ./nginx
+  - docker build -t yoshi0807/multi-server ./server
+  - docker build -t yoshi0807/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin docker.io
   # Take those images and push them to docker hub
