mod github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy MultiDocker
 on:
   push:
     branches:
-      - master
+      - master, develop
 
 jobs:
   build:
@@ -32,7 +32,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: multi-docker
-          environment_name: Multigh-env
+          environment_name: Multi-docker-env
           existing_bucket_name: elasticbeanstalk-ap-northeast-1-784659734030
           region: ap-northeast-1
           version_label: ${{ github.sha }}
