--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: multi-docker
-          environment_name: Multi-docker-env
+          environment_name: Multidocker-env
           existing_bucket_name: elasticbeanstalk-ap-northeast-1-784659734030
           region: ap-northeast-1
           version_label: ${{ github.sha }}
