--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,6 @@ services:
     mem_limit: 128m
     hostname: client
   server:
-    depends_on:
-      - postgres
-      - redis
     image: "yoshi0807/multi-server-10-14"
     mem_limit: 128m
     hostname: api
@@ -28,7 +25,7 @@ services:
       - REDIS_PORT=$REDIS_PORT
   nginx:
     depends_on:
-      - api
+      - server
       - client
     image: "yoshi0807/multi-nginx-10-14"
     mem_limit: 128m
